# people-analytics-data-platform

./: .env.example  .gitignore  README.md  README_recruiter.md  docker-compose.yml  requirements.txt  run_demo.sh
.github/workflows/: ci-data-pipeline.yml  ci-pipeline.yml
c++-csv-accelerator/: BENCHMARK.md  CMakeLists.txt  benchmark.py
c++-csv-accelerator/src/: csv_accel.cpp
dags/: psychometric_pipeline.py
data/: sample_big_five.csv  sample_hr.csv  sample_performance.csv
dbt_project/: .user.yml  dbt_project.yml  profiles.yml  profiles.yml.example
dbt_project/models/marts/: mart_performance_percentiles.sql
dbt_project/models/staging/: sources.yml
dbt_project/repo.git/filter-repo/: commit-map  ref-map
dbt_project/repo.git/objects/info/: commit-graph
dbt_project/repo.git/objects/pack/: pack-2980fdfb314558c6cd30a3d86543b28ca08958e7.bitmap  pack-2980fdfb314558c6cd30a3d86543b28ca08958e7.idx
dbt_project/repo.git/repo.git/: packed-refs
dbt_project/repo.git/repo.git/filter-repo/: first-changed-commits
dbt_project/repo.git/repo.git/info/: refs
docs/: runbook.md
people-analytics-etl/: docker-compose.yml  requirements.txt
people-analytics-etl/sql/: schema.sql
people-analytics-etl/src/transformers/: big_five_normalizer.py
sql/: 01-Compensation-Queries.sql  README.md
src/extractors/: csv_extractor.py  load_hr_data.py
src/transformers/: psycap_calculator.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_dbt_models.py  test_extractors.py  test_transformers.py
(+5 files in other folders)
